# Planet_INC

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
doxygen/: Makefile.am  aminclude.am  planet.dox.in  planet.page
m4/: config_summary.m4
m4/common/: config_environment.m4  grins.m4  libmesh_new.m4
model_docs/: Titan_bimol_diff.tex  Titan_diffusion.tex  Titan_eddy_diff.tex  main.tex  preamble.tex  ref.bib
model_docs/rawfigs/src/: DiffusionMeas.tex  Haye2005-Fig3-20.tex  Titan_code_dep.tex  atm_layers.tex
share/aclocal/: planet.m4
src/: Makefile.am
src/absorption/include/planet/: absorption.h  absorption_grid.h  cross_section.h
src/apps/: planet.C  version.C
src/atmosphere/include/planet/: .atmosphere.h.swp  atmosphere.h
src/core/include/planet/: altitude.h  atmospheric_mixture.h  diffusion_enum.h
src/diffusion/include/planet/: binary_diffusion.h  diffusion_evaluator.h  eddy_diffusion_evaluator.h  molecular_diffusion_evaluator.h
src/grins_interface/include/planet/: physics_factory.h  physics_names.h  planet_bc_handling.h  planet_initial_guess.h  planet_physics.h  planet_physics_evaluator.h  planet_physics_helper.h  planet_upper_neumann_bc.h
src/grins_interface/src/: physics_factory.C  planet_physics.C  planet_physics_helper.C
src/kinetics/include/planet/: atmospheric_kinetics.h  atmospheric_steady_state.h
src/parsing/include/planet/: ionospheric_reaction.h
src/pdf_management/include/planet/: base_pdf.h  branching_ratio_node.h  dior_pdf.h  dirg_pdf.h  diri_pdf.h  dirw_pdf.h  diun_pdf.h  diut_pdf.h  kinetics_branching_structure.h  logn_pdf.h  logu_pdf.h  norm_pdf.h  nort_pdf.h  pdf_enum.h  pdf_management.h  unif_pdf.h
src/photon_flux/include/planet/: chapman.h  photochemical_rate.h  photon_evaluator.h  photon_flux.h  photon_opacity.h
src/queso_interface/include/planet/: base_pdf.h  branching_ratio_node.h  dior_pdf.h  dirg_pdf.h  diri_pdf.h  diun_pdf.h  diut_pdf.h  kinetics_branching_structure.h  kinetics_structure.h  logn_pdf.h  logu_pdf.h  norm_pdf.h  nort_pdf.h  pdf.h  pdf_enum.h  pdf_management.h  reaction_pdf.h  unif_pdf.h
src/solver/include/planet/: .CrankNicholson.h.swp  CrankNicholson.h  crank_nicholson.h
src/temperature/include/planet/: atmospheric_temperature.h
src/utilities/include/planet/: math_constants.h  math_functions.h  planet_constants.h  planet_version.h.in
src/utilities/src/: planet_version.C
test/: .gitignore  Makefile.am  altitude_unit.C  atmosphere_tests.C  atmospheric_mixture_unit.C  atmospheric_mixture_unit.sh.in  binary_diffusion_unit.C  chapman_tests.C  chapman_unit.C  diffusion_evaluator_unit.C  diffusion_evaluator_unit.sh.in  eddy_diffusion_evaluator_unit.C  eddy_diffusion_evaluator_unit.sh.in  ionospheric_test.C  ionospheric_test.sh.in  molecular_diffusion_evaluator_unit.C  molecular_diffusion_evaluator_unit.sh.in  pdf_dior_unit.C  pdf_dirg_unit.C  pdf_diri_unit.C  pdf_dirw_unit.C  pdf_diun_unit.C  pdf_diut_unit.C  pdf_logn_unit.C  pdf_logu_unit.C  pdf_norm_unit.C  pdf_nort_unit.C  pdf_unif_unit.C  photon_evaluator_unit.C  photon_evaluator_unit.sh.in  photon_opacity_unit.C  photon_opacity_unit.sh.in  photon_tests.C  physics_helper_unit.C  physics_helper_unit.sh.in  solver_test.C  solver_test.sh.in  temperature_unit.C  temperature_unit.sh.in
test/input/: T40_Flyby  T40_temp.profile  chemical_species.inp  full_database  grins_input.in.in  grins_input_physics_helper.in.in  hv_cross_section_high_res.C  hv_cross_section_high_res.CH4  hv_cross_section_high_res.H  hv_cross_section_high_res.H2  hv_cross_section_high_res.N2  hv_cross_section_low_res.CH4  hv_cross_section_low_res.H  hv_cross_section_low_res.H2  hv_cross_section_low_res.N2  ionospheric_neutral_comp.inp  ionospheric_reactions.inp  ionospheric_species.inp  neutral_reactions.bimol  neutral_reactions.falloff  neutral_reactions.solv_test  neutral_reactions_photochem.CH4  neutral_reactions_photochem.N2  solver_test.in.in  test_Flyby.txt
