BUILT_SOURCES   = .license.stamp

#----------------------------------------
# Programs and libraries we want to build
#----------------------------------------

bin_PROGRAMS    = planet_version 

lib_LTLIBRARIES = libplanet.la

#----------------------------------------------
# List of source files to build dynamic library
#----------------------------------------------
libplanet_la_SOURCES =

# photon_flux
libplanet_la_SOURCES += 

# atmosphere
libplanet_la_SOURCES += 

# sampling 
libplanet_la_SOURCES += 

# utilities
libplanet_la_SOURCES += utilities/src/planet_version.C

#----------------------------
# INCLUDES we want distributed
#----------------------------
includedir = $(prefix)/include/planet
include_HEADERS =

# core
include_HEADERS += core/include/planet/diffusion_enum.h
include_HEADERS += core/include/planet/altitude.h
include_HEADERS += core/include/planet/atmospheric_mixture.h

# photon_flux
include_HEADERS += photon_flux/include/planet/chapman.h
include_HEADERS += photon_flux/include/planet/photon_opacity.h
include_HEADERS += photon_flux/include/planet/photon_evaluator.h

# absorption
include_HEADERS += absorption/include/planet/cross_section.h

# kinetics
include_HEADERS += kinetics/include/planet/atmospheric_kinetics.h

# temperature
include_HEADERS += temperature/include/planet/atmospheric_temperature.h

# atmosphere
include_HEADERS += atmosphere/include/planet/atmosphere.h

# diffusion
include_HEADERS += diffusion/include/planet/binary_diffusion.h
include_HEADERS += diffusion/include/planet/molecular_diffusion_evaluator.h
include_HEADERS += diffusion/include/planet/eddy_diffusion_evaluator.h
include_HEADERS += diffusion/include/planet/diffusion_evaluator.h

# solvers
include_HEADERS += solver/include/planet/crank_nicholson.h

# sampling
include_HEADERS += 

# utilities
include_HEADERS += utilities/include/planet/math_constants.h
include_HEADERS += utilities/include/planet/planet_constants.h

# Needs to be builddir since this is generated by configure
include_HEADERS += $(top_builddir)/src/utilities/include/planet/planet_version.h

# Version app
planet_version_SOURCES = apps/version.C
planet_version_LDADD = libplanet.la

#--------------------------------------
#Local Directories to include for build
#--------------------------------------
AM_CPPFLAGS  =
AM_CPPFLAGS += -I$(top_srcdir)/src/core/include
AM_CPPFLAGS += -I$(top_srcdir)/src/atmosphere/include
AM_CPPFLAGS += -I$(top_srcdir)/src/photon_flux/include
AM_CPPFLAGS += -I$(top_srcdir)/src/kinetics/include
AM_CPPFLAGS += -I$(top_srcdir)/src/temperature/include
AM_CPPFLAGS += -I$(top_srcdir)/src/absorption/include
AM_CPPFLAGS += -I$(top_srcdir)/src/sampling/include
AM_CPPFLAGS += -I$(top_srcdir)/src/diffusion/include
AM_CPPFLAGS += -I$(top_srcdir)/src/solver/include
AM_CPPFLAGS += -I$(top_srcdir)/src/utilities/include
AM_CPPFLAGS += -I$(top_builddir)/src/utilities/include #planet_version.h
AM_CPPFLAGS +=  $(planet_optional_INCLUDES)

CLEANFILES =

#--------------
# Code coverage
#--------------
if CODE_COVERAGE_ENABLED
  CLEANFILES += *.gcda *.gcno
endif

#---------------------------------
# Embedded license header support
#---------------------------------
STAMPED_FILES = $(libplanet_la_SOURCES) $(include_HEADERS) $(planet_version_SOURCES)

.license.stamp: $(top_srcdir)/LICENSE
	$(top_srcdir)/src/common/lic_utils/update_license.pl -S=$(top_srcdir)/src $(top_srcdir)/LICENSE $(STAMPED_FILES) 
	echo 'updated source license headers' >$@

CLEANFILES += .license.stamp

EXTRA_DIST = common

